# Light-Years-Game

./: CMakeLists.txt  README.md
LightYears/: CMakeLists.txt
LightYears/include/framework/: Application.h
LightYears/src/: main.cpp
LightYears/src/framework/: Application.cpp
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/include/VFX/: Particle.h
LightYearsEngine/include/framework/: Actor.h  Application.h  AssetManager.h  BackdropActor.h  BackgroundLayer.h  Core.h  Delegate.h  MathUtility.h  Object.h  PhysicsSystem.h  TimerManager.h  World.h
LightYearsEngine/include/gameplay/: GameStage.h  WaitStage.h
LightYearsEngine/include/widgets/: Button.h  HUD.h  ImageWidget.h  TextWidget.h  ValueGauge.h  Widget.h
LightYearsEngine/src/: EntryPoint.cpp
LightYearsEngine/src/VFX/: Particle.cpp
LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  BackdropActor.cpp  BackgroundLayer.cpp  Delegate.cpp  MathUtility.cpp  Object.cpp  PhysicsSystem.cpp  TimerManager.cpp  World.cpp
LightYearsEngine/src/gameplay/: GameStage.cpp  WaitStage.cpp
LightYearsEngine/src/widgets/: Button.cpp  HUD.cpp  ImageWidget.cpp  TextWidget.cpp  ValueGauge.cpp  Widget.cpp
LightYearsGame/: CMakeLists.txt  config.ini
LightYearsGame/include/: config.h
LightYearsGame/include/Enemy/: Boss.h  BossStage.h  ChaosStage.h  EnemySpaceship.h  Hexagon.h  HexagonStage.h  TwinBlade.h  TwinBladeStage.h  UFO.h  UFOStage.h  Vanguard.h  VanguardStage.h
LightYearsGame/include/Level/: GameLevelOne.h  MainMenuLevel.h
LightYearsGame/include/VFX/: Explosion.h
LightYearsGame/include/Widgets/: GameplayHUD.h  MainMenuHUD.h
LightYearsGame/include/gameFramework/: GameApplication.h
LightYearsGame/include/gameplay/: HealthComponent.h
LightYearsGame/include/player/: Player.h  PlayerManager.h  PlayerSpaceShip.h  PlayerSpaceship.h  Reward.h
LightYearsGame/include/spaceship/: SpaceShip.h
LightYearsGame/include/weapon/: Bullet.h  BulletShooter.h  FrontWiper.h  Shooter.h  ThreeWayShooter.h
LightYearsGame/src/Enemy/: Boss.cpp  BossStage.cpp  ChaosStage.cpp  EnemySpaceship.cpp  Hexagon.cpp  HexagonStage.cpp  TwinBlade.cpp  TwinBladeStage.cpp  UFO.cpp  UFOStage.cpp  Vanguard.cpp  VanguardStage.cpp
LightYearsGame/src/Level/: GameLevelOne.cpp  MainMenuLevel.cpp
LightYearsGame/src/VFX/: Explosion.cpp
LightYearsGame/src/Widgets/: GameplayHUD.cpp  MainMenuHUD.cpp
LightYearsGame/src/gameFramework/: GameApplication.cpp
LightYearsGame/src/gameplay/: HealthComponent.cpp
LightYearsGame/src/player/: Player.cpp  PlayerManager.cpp  PlayerSpaceShip.cpp  PlayerSpaceship.cpp  Reward.cpp
LightYearsGame/src/spaceship/: SpaceShip.cpp
LightYearsGame/src/weapon/: Bullet.cpp  BulletShooter.cpp  FrontWiper.cpp  Shooter.cpp  ThreeWayShooter.cpp
